adding test for saving new customer